--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.3.3",
     "vue-echarts-v3": "^1.0.4",
     "vue-router": "^2.3.1",
+    "vuetify": "^0.14.5",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
