--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "vue": "^2.3.3",
     "vue-echarts-v3": "^1.0.4",
     "vue-router": "^2.3.1",
